--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
 
     <!-- Load React. -->
     <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
-    <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
+    <!--<script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
 
-    <!-- Load our React component. -->
-    <script src="like_button.js"></script>
+    <! Load our React component. -->
+    <!--<script src="like_button.js"></script>-->
 	<script type='text/javascript' src='js/visTestvcl.js'></script>
 </body>
